feat:分类下下拉

--- a/src/html/list.html
+++ b/src/html/list.html
@@ -19,7 +19,13 @@
 					<h2>男子</h2>
 					<div class="type">
 						<ul>
-							<li><a href="javascript:;">鞋类</a></li>
+							<li class="shoe"><a href="javascript:;">鞋类</a>
+								<ul class="secondlist">
+									<li><a href="javascript:;">跑鞋</a></li>
+									<li><a href="javascript:;">休闲鞋</a></li>
+									<li><a href="javascript:;">健身/训练</a></li>
+								</ul>
+							</li>
 							<li><a href="javascript:;">运动服</a></li>
 							<li><a href="javascript:;">篮球</a></li>
 							<li><a href="javascript:;">上衣</a></li>
